solved overflow problem

--- a/weather.css
+++ b/weather.css
@@ -3,7 +3,6 @@ html {
 }
 #head {
     overflow: hidden;
-    border: solid 2px black;
     display: flex;
     justify-content: space-evenly;
 }
@@ -22,10 +21,9 @@ body {
     align-items: center;
 }
 #city {
-    border: solid 2px black;
     text-align: center;
     font-size: 165%;
-    text-shadow: 2px 2px white;
+    text-shadow: 1px 1px white;
     margin: auto;
     min-width: 25%;
     min-height: 10%; 
@@ -62,14 +60,11 @@ body {
 }
 #location {
     max-width: 50%; 
-    border: solid 2px green;
-    /* overflow: hidden; */
     display: flex;
     align-items: stretch;
 }
 #info {
     max-width: 50%; 
-    border: solid 2px green;
     overflow: hidden;
 }
 #head {
@@ -80,35 +75,43 @@ body {
     font-size: 200%;
 }
 #main {
-    height: 50vw; 
+    min-height: 50%; 
+    min-width: 95%; 
     display: flex;
-}
-h1 {
-    float: right;
+    flex-direction: column;
 }
 .day {
     border: 5px solid lightblue; 
     background-color: lightblue;
     border-radius: 15px;
-    margin: 1rem; 
-    margin-top: 3%;
-    height: 55%; 
-    width: 100%;
+    max-height: 5%; 
+    min-width: 90%;
+    margin: 0.5rem;
+    border: solid 2px black;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
 }
 .weekday {
     text-align: center;
-    padding: 15%; 
+    padding: 10%; 
     font-family: cursive;
     font-size: 200%;
+    max-height: 5%;
+    min-width: 10%;
+    border: solid 2px black;
+    margin: 0.25rem;
 }
 .temp {
     text-align: center;
-    font-size: 500%;
-    margin: 1rem; 
+    font-size: 150%;
+    margin: 0.5rem; 
     padding: 10%; 
     border: 5px solid lightblue; 
     background-color: white;
     border-radius: 15px;
-    height: 45%; 
-    width: 55%;   
+    max-height: 5%; 
+    min-width: 18%;   
+    /* border: solid 2px black; */
+
 }
